2009-05-09 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* add statistics for total system call elapsed time
	* add signal to notify caller when initialization is done
	* add cache timeout option to reduce long-term memory usage

2009-05-06 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* ftrac v0.1 release
	* basic file system calls tracking